<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/darker_gray"
   >

    <TextView
        android:id="@+id/popwindow_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/popwindow_title"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/popwindow_hint_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popwindow_title"
        android:text="@string/popwindow_hint_one"
        android:textColor="@android:color/black"
        android:gravity="left"
        />

    <EditText
        android:id="@+id/popwindow_edit_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/popwindow_hint_one"
        android:textColor="@android:color/black"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/popwindow_hint_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popwindow_edit_name"
        android:text="@string/popwindow_hint_two"
        android:textColor="@android:color/black"
        android:gravity="left"
        />

    <ImageView
        android:id="@+id/popwindow_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_below="@id/popwindow_hint_two"
        android:src="@drawable/popwindow_image"
        />

    <TextView
        android:id="@+id/popwindow_hint_thr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popwindow_image"
        android:text="@string/popwindow_hint_thr"
        android:textColor="@android:color/black"
        android:layout_centerInParent="true"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/popwindow_hint_thr"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:text="@string/sure"
            />
        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:text="@string/cancel"
            />
    </LinearLayout>


</RelativeLayout>