<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/layout_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/text_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:text="@string/rename"
            android:textColor="@android:color/white"
            />

        <EditText
            android:id="@+id/edit_rename"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_adjust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_rename"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/text_adjust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:text="@string/adjust_group"
            android:textColor="@android:color/white"
            />

        <Spinner
            android:id="@+id/spinner_adjust"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_adjust"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/image_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_devides"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_remove"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_child_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            />
        <Button
            android:id="@+id/button_child_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

</RelativeLayout>