<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include android:id="@+id/titlebar" layout="@layout/titlebar" />

    <com.bosong.ball_light.view.impl.ColorPickerView
        android:id="@+id/color_circle"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/titlebar"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/layout_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_circle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <TextView
            android:id="@+id/text_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/tag_no_color"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <!--
        android:numColumns="auto_fit" ，GridView的列数设置为自动
        android:columnWidth="90dp"，每列的宽度，也就是Item的宽度
        android:stretchMode="columnWidth"，缩放与列宽大小同步
        android:verticalSpacing="10dp"，两行之间的边距，如：行一(NO.0~NO.2)与行二(NO.3~NO.5)间距为10dp
        android:horizontalSpacing="10dp"，两列之间的边距
 -->

    <GridView
        android:id="@+id/gridview_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_tag"
        android:gravity="center"
        android:columnWidth="40dp"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="9.0dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="auto_fit"
        >
    </GridView>

    <LinearLayout
        android:id="@+id/layout_mode"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gridview_color"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/mode_jump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_jump"
            />
        <Button
            android:id="@+id/mode_fade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_fade"
            />
        <Button
            android:id="@+id/mode_shade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_shade"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_save"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_mode"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/mode_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_save"
            />
    </LinearLayout>

</RelativeLayout>