<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/layout_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/text_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename"
            android:textColor="@android:color/white"
            />

        <EditText
            android:id="@+id/edit_rename"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_rename"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_group"
            android:textColor="@android:color/white"
            />
        <Button
            android:id="@+id/button_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</RelativeLayout>
