<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include android:id="@+id/titlebar" layout="@layout/titlebar" />

    <RelativeLayout
        android:id="@+id/layout_context"
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:layout_below="@id/titlebar"
        >
        <ImageView
            android:id="@+id/image_context"
            android:layout_width="120dip"
            android:layout_height="120dip"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@id/image_context"
            android:layout_alignBottom="@id/image_context"
            android:layout_toRightOf="@id/image_context"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    />
                <ImageView
                    android:id="@+id/image_status"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    />
                <TextView
                    android:id="@+id/text_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_tag"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_group"
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout_context"
        >
        <TextView
            android:id="@+id/text_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pipei"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />

        <GridView
            android:id="@+id/gridview_groups"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_below="@+id/text_tag"
            android:horizontalSpacing="6dp"
            android:listSelector="@android:color/transparent"
            android:numColumns="3"
            android:verticalSpacing="6dp"
            />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/layout_group"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_context"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            />
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</RelativeLayout>
