<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include android:id="@+id/titlebar" layout="@layout/titlebar" />



    <LinearLayout
        android:id="@+id/layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/text_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_light"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/text_light_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="70%"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/text_warm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_warm"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/text_warm_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="80%"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/text_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_white"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/text_white_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20%"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_seekbar_warm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_text"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="60dp"
        >
        <SeekBar
            android:id="@+id/light_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxHeight="20dp"
            android:progressDrawable="@drawable/seekbar_bg_warm"
            android:thumb="@drawable/seekbar_thumb_warm"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_seekbar_warm"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        >
        <TextView
            android:id="@+id/text_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textColor="@android:color/black"
            />
        <SeekBar
            android:id="@+id/light_progress"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxHeight="2dip"
            android:progressDrawable="@drawable/bg_bar"
            android:thumb="@drawable/thumb_bar"
            />
        <TextView
            android:id="@+id/text_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

</RelativeLayout>