<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_seekbar"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/light_degree"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            />
        <EditText
            android:id="@+id/text_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="15"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            />

        <LinearLayout
            android:id="@+id/layout_seekbar_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:id="@+id/text_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark"
                android:textColor="@android:color/black"
                />
            <SeekBar
                android:id="@+id/light_progress"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxHeight="2dip"
                android:progressDrawable="@drawable/bg_bar"
                android:thumb="@drawable/thumb_bar"
                />
            <TextView
                android:id="@+id/text_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>