<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ui_color_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.bosong.ball_light.view.impl.ColorPickerView
        android:id="@+id/color_circle"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/layout_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_circle"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <TextView
            android:id="@+id/text_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dark"
            android:layout_marginRight="1dip"
            android:textColor="@android:color/black"
            />
        <SeekBar
            android:id="@+id/light_progress"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:maxHeight="2dip"
            android:progressDrawable="@drawable/bg_bar"
            android:thumb="@drawable/thumb_bar"
            />
        <TextView
            android:id="@+id/text_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:layout_marginLeft="1dip"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_seekbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <TextView
            android:id="@+id/text_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dip"
            android:text="@string/tag_no_color"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <!--
        android:numColumns="auto_fit" ，GridView的列数设置为自动
        android:columnWidth="90dp"，每列的宽度，也就是Item的宽度
        android:stretchMode="columnWidth"，缩放与列宽大小同步
        android:verticalSpacing="10dp"，两行之间的边距，如：行一(NO.0~NO.2)与行二(NO.3~NO.5)间距为10dp
        android:horizontalSpacing="10dp"，两列之间的边距
 -->

    <GridView
        android:id="@+id/gridview_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_tag"
        android:gravity="center"
        android:columnWidth="60dp"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="9.0dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="auto_fit"
        >
    </GridView>

</RelativeLayout>
